News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Compact_FieldSet__c.field-meta.xml
<CustomField>
    <fullName>Compact_FieldSet__c</fullName>
    <label>Compact Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>