News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Compact_View_Only__c.field-meta.xml
<CustomField>
    <fullName>Compact_View_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compact View Only</label>
    <type>Checkbox</type>
</CustomField>