News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Full_FieldSet__c.field-meta.xml
<CustomField>
    <fullName>Full_FieldSet__c</fullName>
    <label>Full Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>