News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>