News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>