News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Order_Direction__c.field-meta.xml
<CustomField>
    <fullName>Order_Direction__c</fullName>
    <label>Order Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>