News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directly Owned</fullName>
                <default>true</default>
                <label>Directly Owned</label>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>All Accessible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>