News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Query_filter__c.field-meta.xml
<CustomField>
    <fullName>Query_filter__c</fullName>
    <label>Query filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>