News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <label>Record Types</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>