News UAT/force-app/main/default/objects/AT_ListView_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Icon__c</columns>
    <columns>Object__c</columns>
    <columns>Compact_FieldSet__c</columns>
    <columns>Full_FieldSet__c</columns>
    <columns>Query_filter__c</columns>
    <columns>Order_By__c</columns>
    <columns>Order_Direction__c</columns>
    <columns>Ownership__c</columns>
    <columns>Record_Types__c</columns>
    <columns>Compact_View_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>